--- a/scss/foundations/colors/_colors_definitions.scss
+++ b/scss/foundations/colors/_colors_definitions.scss
@@ -1,7 +1,7 @@
 $default-primary-light: #e7e7e7;
 $default-text-light: #000000;
-$default-text-dark: #1f1f1f;
-$default-primary-dark: #d9d9d9;
+$default-primary-dark: #1f1f1f;
+$default-text-dark: #d9d9d9;
 
 $themes: (
     "light" "art-deco" #d8d7cb #060a24 "srgb-linear",
